--- a/package.json
+++ b/package.json
@@ -13,16 +13,12 @@
   "author": "",
   "license": "BSD",
   "devDependencies": {
-    "karma-script-launcher": "0.0.2",
-    "karma-chrome-launcher": "0.0.2",
-    "karma-firefox-launcher": "0.0.3",
-    "karma-html2js-preprocessor": "0.0.2",
-    "karma-jasmine": "0.0.3",
-    "karma-requirejs": "0.0.3",
-    "karma-coffee-preprocessor": "0.0.3",
-    "karma-phantomjs-launcher": "0.0.2",
-    "karma": "~0.9.6",
-    "karma-mocha": "0.0.4",
-    "karma-chai": "git+https://github.com/xdissent/karma-chai.git"
+    "chai": "^3.0.0",
+    "karma": "^0.12.36",
+    "karma-chai": "^0.1.0",
+    "karma-mocha": "^0.1.10",
+    "karma-phantomjs-launcher": "^0.2.0",
+    "mocha": "^2.2.5",
+    "phantomjs": "^1.9.17"
   }
 }
